@@ -1496,8 +1496,11 @@ class WC_Stripe_Helper {
 	 *
 	 * @param WC_Order $order The order.
 	 * @return bool
+	 *
+	 * @deprecated 8.9.0
 	 */
 	public static function is_wallet_payment_method( $order ) {
+		wc_deprecated_function( __METHOD__, '8.9.0', 'in_array( $order->get_meta( \'_stripe_upe_payment_type\' ), WC_Stripe_Payment_Methods::WALLET_PAYMENT_METHODS, true )' );
 		return in_array( $order->get_meta( '_stripe_upe_payment_type' ), WC_Stripe_Payment_Methods::WALLET_PAYMENT_METHODS, true );
 	}
 
